--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ESTILOS -->
-    <link rel="stylesheet" href="Estilos.css?v=6">
+    <link rel="stylesheet" href="Estilos.css?v=7">
 </head>
 <body>
 
@@ -27,7 +27,7 @@
     <button id="btnMusica">🎵 Activar música</button>
 </nav>
 
-<!-- ⭐ TARJETA EN FORMA DE ESTRELLA -->
+<!-- ⭐ ESTRELLA DECORATIVA -->
 <div class="container-star" id="inicio">
 
     <div class="header-star">
@@ -35,31 +35,34 @@
         <p>Que la magia ilumine tu corazón</p>
     </div>
 
-    <div class="content-star">
+    <!-- 📜 PANEL CENTRAL LEGIBLE -->
+    <div class="content-wrapper">
+        <div class="content-star">
 
-        <h2>Un Mensaje Especial para compartir</h2>
+            <h2>Un Mensaje Especial para compartir</h2>
 
-        <p>
-            Que esta Navidad te regale momentos de calma, sonrisas sinceras
-            y la oportunidad de agradecer todo lo vivido.
-            Que cada luz encendida sea una esperanza renovada
-            y cada abrazo un recuerdo eterno.
-        </p>
+            <p>
+                Que esta Navidad te regale momentos de calma, sonrisas sinceras
+                y la oportunidad de agradecer todo lo vivido.
+                Que cada luz encendida sea una esperanza renovada
+                y cada abrazo un recuerdo eterno.
+            </p>
 
-        <div class="card-star">
-            <h3>Mis Deseos para estas Festividades que se cumplan Son:</h3>
-            <ul>
-                <li>🌟 Que encuentres paz en cada nuevo amanecer</li>
-                <li>🎄 Que la unión y el cariño rodeen tu hogar</li>
-                <li>🎁 Que los pequeños momentos se vuelvan grandes recuerdos</li>
-                <li>✨ Que el nuevo año llegue lleno de oportunidades</li>
-            </ul>
+            <div class="card-star">
+                <h3>Mis Deseos para estas Festividades que se cumplan Son:</h3>
+                <ul>
+                    <li>🌟 Que encuentres paz en cada nuevo amanecer</li>
+                    <li>🎄 Que la unión y el cariño rodeen tu hogar</li>
+                    <li>🎁 Que los pequeños momentos se vuelvan grandes recuerdos</li>
+                    <li>✨ Que el nuevo año llegue lleno de oportunidades</li>
+                </ul>
+            </div>
+
+            <div class="emoji-line">⭐ 🎄 🎁 ✨</div>
+
+            <p class="final-text">¡Feliz Navidad y un Próspero Año Nuevo!</p>
+
         </div>
-
-        <div class="emoji-line">⭐ 🎄 🎁 ✨</div>
-
-        <p class="final-text">¡Feliz Navidad y un Próspero Año Nuevo!</p>
-
     </div>
 
     <div class="footer-star">
@@ -70,7 +73,7 @@
 </div>
 
 <!-- EFECTOS -->
-<script src="animacionnevada.js?v=6"></script>
+<script src="animacionnevada.js?v=7"></script>
 
 </body>
 </html>
