--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <title>Feliz Navidad 2025</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- ESTILOS -->
-    <link rel="stylesheet" href="Estilos.css?v=7">
+    <link rel="stylesheet" href="Estilos.css">
 </head>
 <body>
 
 <!-- 🎄 LUCES -->
 <div class="luces">
-    <span></span><span></span><span></span><span></span><span></span>
     <span></span><span></span><span></span><span></span><span></span>
 </div>
 
@@ -27,54 +24,52 @@
     <button id="btnMusica">🎵 Activar música</button>
 </nav>
 
-<!-- ⭐ ESTRELLA DECORATIVA -->
-<div class="container-star" id="inicio">
+<!-- ⭐ CONTENEDOR PRINCIPAL -->
+<section class="hero">
 
-    <div class="header-star">
-        ⭐ Feliz Navidad ⭐
-        <p>Que la magia ilumine tu corazón</p>
-    </div>
+    <!-- ⭐ ESTRELLA SOLO DECORATIVA -->
+    <div class="star-shape"></div>
 
-    <!-- 📜 PANEL CENTRAL LEGIBLE -->
-    <div class="content-wrapper">
-        <div class="content-star">
+    <!-- 📜 TEXTO LEGIBLE -->
+    <div class="text-panel">
 
-            <h2>Un Mensaje Especial para compartir</h2>
+        <h1>✨ Feliz Navidad ✨</h1>
 
-            <p>
-                Que esta Navidad te regale momentos de calma, sonrisas sinceras
-                y la oportunidad de agradecer todo lo vivido.
-                Que cada luz encendida sea una esperanza renovada
-                y cada abrazo un recuerdo eterno.
-            </p>
+        <p class="intro">
+            Que esta Navidad te regale momentos de calma, sonrisas sinceras
+            y la oportunidad de agradecer todo lo vivido.
+        </p>
 
-            <div class="card-star">
-                <h3>Mis Deseos para estas Festividades que se cumplan Son:</h3>
-                <ul>
-                    <li>🌟 Que encuentres paz en cada nuevo amanecer</li>
-                    <li>🎄 Que la unión y el cariño rodeen tu hogar</li>
-                    <li>🎁 Que los pequeños momentos se vuelvan grandes recuerdos</li>
-                    <li>✨ Que el nuevo año llegue lleno de oportunidades</li>
-                </ul>
-            </div>
+        <p>
+            Que cada luz encendida sea una esperanza renovada
+            y cada abrazo un recuerdo eterno.
+        </p>
 
-            <div class="emoji-line">⭐ 🎄 🎁 ✨</div>
-
-            <p class="final-text">¡Feliz Navidad y un Próspero Año Nuevo!</p>
-
+        <div class="card">
+            <h2>🎄 Mis Deseos para estas Festividades que se cumplan son:</h2>
+            <ul>
+                <li>🌟 Paz en cada nuevo amanecer</li>
+                <li>🏡 Unión y cariño en tu hogar</li>
+                <li>🎁 Que los pequeños momentos se vuelvan grandes</li>
+                <li>✨ Un año nuevo lleno de oportunidades</li>
+            </ul>
         </div>
+
+        <p class="final">
+            ⭐ ¡Feliz Navidad y Próspero Año Nuevo! ⭐
+        </p>
+
+        <footer>
+            Con cariño 💖<br>
+            Jhofre Jesus Zambrano Robalino
+        </footer>
+
     </div>
 
-    <div class="footer-star">
-        © 2025 — Con cariño 🎄<br>
-        Jhofre Jesus Zambrano Robalino
-    </div>
+</section>
 
-</div>
-
-<!-- EFECTOS -->
-<script src="animacionnevada.js?v=7"></script>
-
+<script src="animacionnevada.js"></script>
 </body>
 </html>
+
 
